--- a/theme/lumo/vaadin-text-field.html
+++ b/theme/lumo/vaadin-text-field.html
@@ -43,12 +43,12 @@
         box-sizing: border-box;
       }
 
-      :host([label])::before {
+      :host([label]:not([label=""]))::before {
         /* Label height + input-field margin-top */
         margin-top: calc(var(--lumo-font-size-s) + var(--lumo-space-xs) * 2);
       }
 
-      :host([label]) {
+      :host([label]:not([label=""])) {
         margin-top: var(--lumo-space-m);
       }
 
