--- a/src/vaadin-password-field.html
+++ b/src/vaadin-password-field.html
@@ -68,7 +68,7 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * @memberof Vaadin
        * @extends Vaadin.TextFieldElement
-       * @demo demo/password.html
+       * @demo demo/index.html
        */
       class PasswordFieldElement extends Vaadin.TextFieldElement {
         static get is() {
