--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -124,7 +124,7 @@ This program is available under Apache License Version 2.0, available at https:/
            * characters: Characters capitalization.
            * words: Words capitalization.
            * sentences: Sentences capitalization.
-           * off: No capitalization.
+           * none: No capitalization.
            */
           autocapitalize: {
             type: String
