--- a/src/vaadin-password-field.html
+++ b/src/vaadin-password-field.html
@@ -70,7 +70,6 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * See [ThemableMixin – how to apply styles for shadow parts](https://github.com/vaadin/vaadin-themable-mixin/wiki)
        *
-       * @memberof Vaadin
        * @extends Vaadin.TextFieldElement
        * @demo demo/index.html
        */
@@ -87,6 +86,7 @@ This program is available under Apache License Version 2.0, available at https:/
           return {
             /**
              * Set to true to hide the eye icon which toggles the password visibility.
+             * @type {boolean}
              */
             revealButtonHidden: {
               type: Boolean,
@@ -95,6 +95,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
             /**
              * True if the password is visible ([type=text]).
+             * @type {boolean}
              */
             passwordVisible: {
               type: Boolean,
@@ -125,6 +126,7 @@ This program is available under Apache License Version 2.0, available at https:/
           return memoizedTemplate;
         }
 
+        /** @protected */
         ready() {
           super.ready();
           this.inputElement.type = 'password';
@@ -140,6 +142,10 @@ This program is available under Apache License Version 2.0, available at https:/
           });
         }
 
+        /**
+         * @param {!Event} e
+         * @protected
+         */
         _onChange(e) {
           const slotted = this.querySelector(`${this._slottedTagName}[slot="${this._slottedTagName}"]`);
           if (slotted) {
@@ -153,12 +159,14 @@ This program is available under Apache License Version 2.0, available at https:/
           }
         }
 
+        /** @private */
         _revealButtonMouseDown(e) {
           if (this.hasAttribute('focused')) {
             e.preventDefault();
           }
         }
 
+        /** @private */
         _togglePasswordVisibilityTouchend(e) {
           // Cancel the following click event
           e.preventDefault();
@@ -166,6 +174,7 @@ This program is available under Apache License Version 2.0, available at https:/
           this.inputElement.focus();
         }
 
+        /** @private */
         _togglePasswordVisibility() {
           this._passwordVisibilityChanging = true;
           this.inputElement.blur();
@@ -174,6 +183,7 @@ This program is available under Apache License Version 2.0, available at https:/
           this._passwordVisibilityChanging = false;
         }
 
+        /** @private */
         _passwordVisibleChange(passwordVisible) {
           this.inputElement.type = passwordVisible ? 'text' : 'password';
         }
