fix: use flattened nodes on helper slot
A 3rd custom element using `vaadin-text-field` and defining a slot
area for the `vaadin-text-field`'s helper slot was making
`vaadin-text-field` see the slot element as a slotted contend and
setting `has-helper="slotted"` to itself.

This change uses flattened nodes to check the presence of slotted
elements on `vaadin-text-field` `helper` slot.

In this change
- use `FlattenedNodesObserver` instead of `slotchange` event
- use `FlattenedNodesObserver.getFlattenedNodes` to get slot children
- apply changes to tests
- remove checks for unsupported types

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -6,6 +6,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
 <link rel="import" href="../../polymer/lib/utils/async.html">
 <link rel="import" href="../../polymer/lib/utils/debounce.html">
+<link rel="import" href="../../polymer/lib/utils/flattened-nodes-observer.html">
 
 <dom-module id="vaadin-text-field-shared-styles">
   <template>
@@ -499,25 +500,25 @@ This program is available under Apache License Version 2.0, available at https:/
 
     /** @private */
     _labelChanged(label) {
-      this._setOrToggleAttribute('has-label', label === 0 || !!label, this);
+      this._setOrToggleAttribute('has-label', !!label, this);
     }
 
     /** @private */
     _helperTextChanged(helperText) {
-      this._setOrToggleAttribute('has-helper', helperText === 0 || !!helperText, this);
+      this._setOrToggleAttribute('has-helper', !!helperText, this);
     }
 
     /** @private */
     _errorMessageChanged(errorMessage) {
-      this._setOrToggleAttribute('has-error-message', errorMessage === 0 || !!errorMessage, this);
+      this._setOrToggleAttribute('has-error-message', !!errorMessage, this);
     }
 
     /** @private */
-    _onHelperSlotChange() {
-      const slottedNodes = this.shadowRoot.querySelector(`[name="helper"]`).assignedNodes();
+    _helperSlotObserverCallback(info) {
+      const slottedNodes = Polymer.FlattenedNodesObserver.getFlattenedNodes(info.target);
       // Only has slotted helper if not a text node
       // Text nodes are added by the helperText prop and not the helper slot
-      // The filter is added due to shady DOM triggering this slotchange event on helperText prop change
+      // The filter is added due to shady DOM triggering this callback on helperText prop change
       this._hasSlottedHelper = slottedNodes.filter(node => node.nodeType !== 3).length;
 
       if (this._hasSlottedHelper) {
@@ -680,8 +681,8 @@ This program is available under Apache License Version 2.0, available at https:/
       this.shadowRoot.querySelector('[name="input"], [name="textarea"]')
         .addEventListener('slotchange', this._onSlotChange.bind(this));
 
-      this._onHelperSlotChange();
-      this.shadowRoot.querySelector('[name="helper"]').addEventListener('slotchange', this._onHelperSlotChange.bind(this));
+      this._helperObserver = new Polymer.FlattenedNodesObserver(
+        this.shadowRoot.querySelector('[name="helper"]'), this._helperSlotObserverCallback.bind(this));
 
       if (!(window.ShadyCSS && window.ShadyCSS.nativeCss)) {
         this.updateStyles();
@@ -704,6 +705,18 @@ This program is available under Apache License Version 2.0, available at https:/
         .addEventListener('transitionend', () => {
           this.__observeOffsetHeight();
         });
+    }
+
+    /** @protected */
+    connectedCallback() {
+      super.connectedCallback();
+      this._helperObserver && this._helperObserver.connect();
+    }
+
+    /** @protected */
+    disconnectedCallback() {
+      super.disconnectedCallback();
+      this.__helperObserver && this.__helperObserver.disconnect();
     }
 
     /**
