--- a/test/text-field.html
+++ b/test/text-field.html
@@ -35,12 +35,42 @@
       </vaadin-text-field>
     </template>
   </test-fixture>
-  
+
   <test-fixture id="default-with-slotted-helper">
     <template>
       <vaadin-text-field>
         <div slot="helper">foo</div>
       </vaadin-text-field>
+    </template>
+  </test-fixture>
+
+  <dom-module id="x-element">
+    <template>
+      <vaadin-text-field id="textField" helper-text="[[helperText]]">
+        <slot slot="helper" name="helper"></slot>
+      </vaadin-text-field>
+    </template>
+  </dom-module>
+
+  <script>
+    addEventListener('WebComponentsReady', () => {
+      class XElement extends Polymer.Element {
+        static get is() {
+          return 'x-element';
+        }
+        static get properties() {
+          return {
+            helperText: String
+          };
+        }
+      }
+      window.customElements.define(XElement.is, XElement);
+    });
+  </script>
+
+  <test-fixture id="custom-element-with-slotted-helper">
+    <template>
+      <x-element></x-element>
     </template>
   </test-fixture>
 
@@ -273,12 +303,6 @@
         });
 
         describe(`binding ${condition}`, function() {
-          function dispatchHelperSlotChange() {
-            // Workaround not to use timeouts
-            const evt = new CustomEvent('slotchange');
-            textField.shadowRoot.querySelector('[name="helper"]').dispatchEvent(evt);
-          }
-
           it('default value should be empty string', function() {
             expect(textField.value).to.be.equal('');
           });
@@ -336,11 +360,6 @@
             expect(textField.hasAttribute('has-label')).to.be.false;
           });
 
-          it('setting number label updates has-label attribute', function() {
-            textField.label = 0;
-            expect(textField.hasAttribute('has-label')).to.be.true;
-          });
-
           it('setting helper updates has-helper attribute', function() {
             textField.helperText = 'foo';
             expect(textField.hasAttribute('has-helper')).to.be.true;
@@ -356,14 +375,9 @@
             expect(textField.hasAttribute('has-helper')).to.be.false;
           });
 
-          it('setting number helper updates has-helper attribute', function() {
-            textField.helperText = 0;
-            expect(textField.hasAttribute('has-helper')).to.be.true;
-          });
-
           it('text-field with slotted helper updates has-helper attribute', function() {
             const textFieldSlottedHelper = fixture('default-with-slotted-helper');
-            dispatchHelperSlotChange();
+            textFieldSlottedHelper._helperObserver.flush();
             expect(textFieldSlottedHelper.hasAttribute('has-helper')).to.be.true;
           });
 
@@ -372,7 +386,8 @@
             helper.setAttribute('slot', 'helper');
             helper.textContent = 'foo';
             textField.appendChild(helper);
-            dispatchHelperSlotChange();
+            textField._helperObserver.flush();
+
             expect(textField.hasAttribute('has-helper')).to.be.true;
           });
 
@@ -385,6 +400,32 @@
               expect(textFieldSlottedHelper.hasAttribute('has-helper')).to.be.false;
               done();
             }, 1);
+          });
+
+          it('should not add "has-helper" with a slotted "slot" element', function() {
+            const xElement = fixture('custom-element-with-slotted-helper');
+            const textField = xElement.$.textField;
+            expect(textField.hasAttribute('has-helper')).to.be.false;
+          });
+
+          it('should add "has-helper" when slotted "slot" and custom element sets string property', function() {
+            const xElement = fixture('custom-element-with-slotted-helper');
+            const textField = xElement.$.textField;
+            xElement.helperText = 'helper text';
+            expect(textField.hasAttribute('has-helper')).to.be.true;
+          });
+
+          it('should add "has-helper=slotted" when slotted "slot" and custom element sets content to slot', function() {
+            const xElement = fixture('custom-element-with-slotted-helper');
+            const textField = xElement.$.textField;
+            const span = document.createElement('span');
+            span.textContent = 'helper text';
+            span.setAttribute('slot', 'helper');
+            xElement.appendChild(span);
+            textField._helperObserver.flush();
+
+            expect(textField.hasAttribute('has-helper')).to.be.true;
+            expect(textField.getAttribute('has-helper')).to.be.equal('slotted');
           });
 
           it('setting errorMessage updates has-error-message attribute', function() {
