--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -178,6 +178,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         /**
          * Set to true to display the clear icon which clears the input.
+         * @attr {boolean} clear-button-visible
          * @type {boolean}
          */
         clearButtonVisible: {
@@ -187,6 +188,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         /**
          * Error to show when the input value is invalid.
+         * @attr {string} error-message
          * @type {string}
          */
         errorMessage: {
@@ -295,6 +297,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         /**
          * Specifies that the text field has value.
+         * @attr {boolean} has-value
          */
         hasValue: {
           type: Boolean,
@@ -304,6 +307,7 @@ This program is available under Apache License Version 2.0, available at https:/
         /**
          * When set to true, user is prevented from typing a value that
          * conflicts with the given `pattern`.
+         * @attr {boolean} prevent-invalid-input
          */
         preventInvalidInput: {
           type: Boolean
