--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -143,7 +143,7 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         static get version() {
-          return '2.7.0-alpha6';
+          return '2.7.0-beta1';
         }
 
         static get observers() {
